# notd

./: .gitignore  CLAUDE.md  README.md  notd  notd-cli  package-lock.json  package.json  run.sh  vite.config.ts
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: architecture.md  file-format.md  index.html  keyboard.md
scripts/: generate-icons.py  generate-tray-app-icon.py  generate-tray-icon.py
src/: app.css  app.html  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  lib.rs  main.rs  storage.rs  tray.rs  watcher.rs
src/components/: AppBar.svelte  Banner.svelte  DotRow.svelte  Editor.svelte  EmptyState.svelte  Preview.svelte  Settings.svelte  Setup.svelte
src/lib/: bootstrap.ts  colors.ts  filename.ts  fs.ts  markdown.ts  meta.ts  saveManager.ts  shortcuts.ts  stores.ts
src/routes/: +layout.svelte  +page.svelte
