[package]
name = "notd-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line companion for the notd macOS app"
publish = false

[[bin]]
name = "notd"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
